added image file, added questions to js

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title></title>
-  <link href="css/stylesheet.css" type="text/css" rel="stylesheet" />
+  <link href="css/style.css" type="text/css" rel="stylesheet" />
 </head>
 <body>
     <!-- The header gives a heading section to the page, and always goes in the body tag -->
