added questions and body part rules to js; and background image

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <!-- The header gives a heading section to the page, and always goes in the body tag -->
   <header>
-    <h2>Roscoe's About Me Game</h2>
+    <h2>Roscoe's About Me</h2>
   </header>
 
 
