--- a/index.html
+++ b/index.html
@@ -2,22 +2,52 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title></title>
+  <title>About Roscoe Horror Game</title>
   <link href="css/style.css" type="text/css" rel="stylesheet" />
 </head>
 <body>
-    <!-- The header gives a heading section to the page, and always goes in the body tag -->
-  <header>
     <h2>Roscoe's About Me</h2>
-  </header>
-
-
-
-
-
-
-
-
+    <dl> <!--Quick summary of who I am--->
+      <dt>Bio</dt>
+        <dd>Roscoe is a software developer and is currently a<br>student at Code Fellows as a part of the first<br> cohort of the new technology program,WTIA's<br> Apprenti in Washington state.</dd>
+        <section><!--Top 10 List --->
+          <h3>Roscoe's Top 10 Sushi Ingredients</h3>
+          <ol class="top10">
+            <li>Uni</li>
+            <li>Sake(Salmon)</li>
+            <li>Ahi</li>
+            <li>Hamachi</li>
+            <li>Unagi</li>
+            <li>Tako</li>
+            <li>Saba</li>
+            <li>Ebi</li>
+            <li>Roe</li>
+            <li>Daikon Radish</li>
+          </ol>
+        </section>
+      <dt>Education</dt>
+        <dd>
+          <ul>
+            <li>Renton High School</li>
+            <li>Air Traffic Control A and C schools</li>
+            <li>Currently at Code Fellows</li>
+          </ul>
+        </dd><!--List of schools--->
+      <dt>Job XP</dt>
+        <dd>
+          <ul>
+            <li>Dance Instructor</li>
+            <li>Boxing Coach</li>
+          </ul>
+        </dd><!--Previous jobs --->
+      <dt>Goals</dt>
+        <dd>
+          <ul>
+            <li>Pass 201 class at Code Fellows</li>
+            <li>Pass 301 class at Code Fellows</li>
+          </ul>
+        </dd><!--Future goals --->
+    </dl>
   <script src="js/app.js"></script>
 </body>
 </html>
