made adjustments to Top 10 margins in css, added functions to js, added start of nav bar to html

--- a/index.html
+++ b/index.html
@@ -6,6 +6,14 @@
     <link href="css/style.css" type="text/css" rel="stylesheet" />
   </head>
   <body>
+    <!--<nav><!--Make links for all --->
+      <!--<ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="dummywebsite.com">Play</a></li>
+        <li><a href="anotherdummy.com">About</a></li>
+        <li><a href="yetanotherdummy.com">Contact</a></li>
+      </ul>--->
+    <!--</nav>--->
     <h2>Roscoe's About Me</h2>
     <dl> <!--Quick summary of who I am--->
       <dt>Bio</dt>
