Added new Homepage and Credits page with nav links

--- a/html/credits.html
+++ b/html/credits.html
@@ -2,36 +2,22 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>About Roscoe Horror Game</title>
+    <title>Credits</title>
     <link href="css/style.css" type="text/css" rel="stylesheet" />
   </head>
   <body>
     <nav><!--Make links for all--->
       <ul>
-        <li><a href="html/home.html">Home</a></li>
-        <li><a href="index.html">Play</a></li>
-        <li><a href="html/credits.html">Credits</a></li>
+        <li><a href="home.html">Home</a></li>
+        <li><a href="../index.html">Play</a></li>
+        <li><a href="/">Credits</a></li>
       </ul>
     </nav>
-    <h2>Roscoe's About Me</h2>
-    <!-- <dl> <!--Quick summary of who I am--->
-      <!-- <dt>Bio</dt>
+    <h2>Credits</h2>
+    <dl>
+      <dt>Bio</dt>
         <dd>Roscoe is a software developer and is currently a<br>student at Code Fellows as a part of the first<br> cohort of the new technology program,WTIA's<br> Apprenti in Washington state.</dd>
-          <section><!--Top 10 List --->
-            <!-- <h3>Roscoe's Top 10 Sushi Ingredients</h3>
-              <ol class="top10">
-                <li>Uni</li>
-                <li>Sake(Salmon)</li>
-                <li>Ahi</li>
-                <li>Hamachi</li>
-                <li>Unagi</li>
-                <li>Tako</li>
-                <li>Saba</li>
-                <li>Ebi</li>
-                <li>Roe</li>
-                <li>Daikon Radish</li>
-              </ol>
-          </section>
+
       <dt>Education</dt>
         <dd>
           <ul>
@@ -40,21 +26,22 @@
             <li>Currently at Code Fellows</li>
           </ul>
         </dd><!--List of schools--->
-      <!-- <dt>Job XP</dt>
+      <dt>Job XP</dt>
         <dd>
           <ul>
             <li>Dance Instructor</li>
             <li>Boxing Coach</li>
           </ul>
         </dd><!--Previous jobs --->
-      <!-- <dt>Goals</dt>
+      <dt>Goals</dt>
         <dd>
           <ul>
             <li>Pass 201 class at Code Fellows</li>
             <li>Pass 301 class at Code Fellows</li>
           </ul>
         </dd><!--Future goals --->
-    <!-- </dl> -->
+    </dl>
     <script src="js/app.js"></script>
   </body>
 </html>
+<!--  -->
