--- a/html/home.html
+++ b/html/home.html
@@ -2,23 +2,23 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>About Roscoe Horror Game</title>
+    <title>Roscoe at a Glance</title>
     <link href="css/style.css" type="text/css" rel="stylesheet" />
   </head>
   <body>
-    <nav><!--Make links for all--->
+    <nav><!--Make links for all --->
       <ul>
-        <li><a href="html/home.html">Home</a></li>
-        <li><a href="index.html">Play</a></li>
-        <li><a href="html/credits.html">Credits</a></li>
+        <li><a href="/">Home</a></li>
+        <li><a href="../index.html">Play</a></li>
+        <li><a href="credits.html">Credits</a></li>
       </ul>
     </nav>
     <h2>Roscoe's About Me</h2>
-    <!-- <dl> <!--Quick summary of who I am--->
-      <!-- <dt>Bio</dt>
+    <dl> <!--Quick summary of who I am--->
+      <dt>Bio</dt>
         <dd>Roscoe is a software developer and is currently a<br>student at Code Fellows as a part of the first<br> cohort of the new technology program,WTIA's<br> Apprenti in Washington state.</dd>
           <section><!--Top 10 List --->
-            <!-- <h3>Roscoe's Top 10 Sushi Ingredients</h3>
+            <h3>Roscoe's Top 10 Sushi Ingredients</h3>
               <ol class="top10">
                 <li>Uni</li>
                 <li>Sake(Salmon)</li>
@@ -40,21 +40,20 @@
             <li>Currently at Code Fellows</li>
           </ul>
         </dd><!--List of schools--->
-      <!-- <dt>Job XP</dt>
+      <dt>Job XP</dt>
         <dd>
           <ul>
             <li>Dance Instructor</li>
             <li>Boxing Coach</li>
           </ul>
         </dd><!--Previous jobs --->
-      <!-- <dt>Goals</dt>
+      <dt>Goals</dt>
         <dd>
           <ul>
             <li>Pass 201 class at Code Fellows</li>
             <li>Pass 301 class at Code Fellows</li>
           </ul>
         </dd><!--Future goals --->
-    <!-- </dl> -->
-    <script src="js/app.js"></script>
+    </dl>
   </body>
 </html>
