Added background img and color to home and credits pages, respectfully; made adjustments to background img alignment

--- a/html/credits.html
+++ b/html/credits.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Credits</title>
-    <link href="css/style.css" type="text/css" rel="stylesheet" />
+    <link href="../css/creditsstyle.css" type="text/css" rel="stylesheet" />
   </head>
   <body>
     <nav><!--Make links for all--->
