--- a/html/home.html
+++ b/html/home.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Roscoe at a Glance</title>
-    <link href="css/style.css" type="text/css" rel="stylesheet" />
+    <link href="../css/homestyle.css" type="text/css" rel="stylesheet" />
   </head>
   <body>
     <nav><!--Make links for all --->
