--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <style>
+    @import url('https://fonts.googleapis.com/css?family=Nosifer');
+    </style>
     <title>About Roscoe Horror Game</title>
     <link href="css/style.css" type="text/css" rel="stylesheet" />
   </head>
