Made nav bar into table, removed nav link underlines, added hover color to links

--- a/html/credits.html
+++ b/html/credits.html
@@ -7,11 +7,13 @@
   </head>
   <body>
     <nav><!--Make links for all--->
-      <ul>
-        <li><a href="home.html">Home</a></li>
-        <li><a href="../index.html">Play</a></li>
-        <li><a href="/">Credits</a></li>
-      </ul>
+      <table>
+        <tr>
+          <td><a href="html/home.html">Home</a></td>
+          <td><a href="index.html">Play</a></td>
+          <td><a href="html/credits.html">Credits</a></td>
+        </tr>
+      </table>
     </nav>
     <h2>Credits</h2>
     <dl>
