--- a/html/home.html
+++ b/html/home.html
@@ -6,12 +6,14 @@
     <link href="../css/homestyle.css" type="text/css" rel="stylesheet" />
   </head>
   <body>
-    <nav><!--Make links for all --->
-      <ul>
-        <li><a href="/">Home</a></li>
-        <li><a href="../index.html">Play</a></li>
-        <li><a href="credits.html">Credits</a></li>
-      </ul>
+    <nav><!--Make links for all--->
+      <table>
+        <tr>
+          <td><a href="html/home.html">Home</a></td>
+          <td><a href="index.html">Play</a></td>
+          <td><a href="html/credits.html">Credits</a></td>
+        </tr>
+      </table>
     </nav>
     <h2>Roscoe's About Me</h2>
     <dl> <!--Quick summary of who I am--->
