Added new fonts to home.html; new links to credits.html

--- a/html/credits.html
+++ b/html/credits.html
@@ -9,41 +9,16 @@
     <nav><!--Make links for all--->
       <table>
         <tr>
-          <td><a href="html/home.html">Home</a></td>
-          <td><a href="index.html">Play</a></td>
-          <td><a href="html/credits.html">Credits</a></td>
+          <td><a href="home.html">Home</a></td>
+          <td><a href="../index.html">Game</a></td>
+          <td><a href="credits.html">Credits</a></td>
         </tr>
       </table>
     </nav>
     <h2>Credits</h2>
-    <dl>
-      <dt>Bio</dt>
-        <dd>Roscoe is a software developer and is currently a<br>student at Code Fellows as a part of the first<br> cohort of the new technology program,WTIA's<br> Apprenti in Washington state.</dd>
-
-      <dt>Education</dt>
-        <dd>
-          <ul>
-            <li>Renton High School</li>
-            <li>Air Traffic Control A and C schools</li>
-            <li>Currently at Code Fellows</li>
-          </ul>
-        </dd><!--List of schools--->
-      <dt>Job XP</dt>
-        <dd>
-          <ul>
-            <li>Dance Instructor</li>
-            <li>Boxing Coach</li>
-          </ul>
-        </dd><!--Previous jobs --->
-      <dt>Goals</dt>
-        <dd>
-          <ul>
-            <li>Pass 201 class at Code Fellows</li>
-            <li>Pass 301 class at Code Fellows</li>
-          </ul>
-        </dd><!--Future goals --->
-    </dl>
-    <script src="js/app.js"></script>
+      <ul>
+        <li>Homepage background image owner - <a href="https://www.flickr.com/photos/playstationblogeurope/">Playstation Europe</a>'s <a href="https://www.flickr.com/">Flickr</a> page</li>
+        <li>Game page background image owner - <a href="https://www.flickr.com/photos/althani-cornerstone/">Mubarak ALThani</a>'s <a href="https://www.flickr.com/">Flickr</a> page</li>
   </body>
 </html>
 <!--  -->
