--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <table>
         <tr>
           <td><a href="html/home.html">Home</a></td>
-          <td><a href="index.html">Play</a></td>
+          <td><a href="index.html">Game</a></td>
           <td><a href="html/credits.html">Credits</a></td>
         </tr>
       </table>
