switch content of game.html with index.html

--- a/html/game.html
+++ b/html/game.html
@@ -2,61 +2,25 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Roscoe at a Glance</title>
-    <link href="../css/homestyle.css" type="text/css" rel="stylesheet" />
-    <link href="https://fonts.googleapis.com/css?family=Ceviche+One" rel="stylesheet">
+    <style>
+    @import url('https://fonts.googleapis.com/css?family=Nosifer');
+    </style>
+    <title>About Roscoe Horror Game</title>
+    <link href="css/style.css" type="text/css" rel="stylesheet" />
   </head>
   <body>
     <nav><!--Make links for all--->
       <table>
         <tr>
-          <td><a href="home.html">Home</a></td>
-          <td><a href="../index.html">Game</a></td>
-          <td><a href="credits.html">Credits</a></td>
+          <td><a href="html/home.html">Home</a></td>
+          <td><a href="index.html">Game</a></td>
+          <td><a href="html/credits.html">Credits</a></td>
         </tr>
       </table>
     </nav>
-    <h2>Roscoe at a Glance</h2>
-    <dl> <!--Quick summary of who I am--->
-      <dt>Bio</dt>
-      <section><!--Top 10 List --->
-        <h3>Roscoe's Top 10 Sushi</h3>
-        <ol class="top10">
-          <li>Uni</li>
-          <li>Sake(Salmon)</li>
-          <li>Ahi</li>
-          <li>Hamachi</li>
-          <li>Unagi</li>
-          <li>Tako</li>
-          <li>Saba</li>
-          <li>Ebi</li>
-          <li>Roe</li>
-          <li>Daikon Radish</li>
-        </ol>
-      </section>
-        <dd>Roscoe is a software developer and is currently a<br>student at Code Fellows as a part of the first<br> cohort of the new technology program,WTIA's<br> Apprenti in Washington state.</dd>
-      <dt>Education</dt>
-        <dd>
-          <ul>
-            <li>Renton High School</li>
-            <li>Air Traffic Control A and C schools</li>
-            <li>Currently at Code Fellows</li>
-          </ul>
-        </dd><!--List of schools--->
-      <dt>Job XP</dt>
-        <dd>
-          <ul>
-            <li>Dance Instructor</li>
-            <li>Boxing Coach</li>
-          </ul>
-        </dd><!--Previous jobs --->
-      <dt>Goals</dt>
-        <dd>
-          <ul>
-            <li>Pass 201 class at Code Fellows</li>
-            <li>Pass 301 class at Code Fellows</li>
-          </ul>
-        </dd><!--Future goals --->
-    </dl>
+    <div>
+      <h2>I<br>want<br>to<br>play<br>a<br>game with you</h2>
+    </div>
+    <script src="js/app.js"></script>
   </body>
 </html>
