Styled nav bars for all html with bg color and hover colors

--- a/html/credits.html
+++ b/html/credits.html
@@ -6,19 +6,25 @@
     <link href="../css/creditsstyle.css" type="text/css" rel="stylesheet" />
   </head>
   <body>
-    <nav><!--Make links for all--->
+    <nav>
       <table>
         <tr>
-          <td><a href="home.html">Home</a></td>
-          <td><a href="../index.html">Game</a></td>
-          <td><a href="credits.html">Credits</a></td>
+          <td><a href="../index.html" title="Homepage">Home</a>
+          </td>
+          <td><a href="game.html" title="Prompt-Based Horror Game">Game</a>
+          </td>
+          <td><a href="credits.html" title="Image Credits">Credits</a>
+          </td>
         </tr>
       </table>
     </nav>
-    <h2>Credits</h2>
-      <ul>
-        <li>Homepage background image owner - <a href="https://www.flickr.com/photos/playstationblogeurope/">Playstation Europe</a>'s <a href="https://www.flickr.com/">Flickr</a> page</li>
-        <li>Game page background image owner - <a href="https://www.flickr.com/photos/althani-cornerstone/">Mubarak ALThani</a>'s <a href="https://www.flickr.com/">Flickr</a> page</li>
+    <h1>Credits</h1>
+      <ul class="credits">
+        <li>Homepage background image owner - <a href="https://www.flickr.com/photos/playstationblogeurope/">Playstation Europe</a>'s Flickr page.</li>
+        <li>Game page background image owner - <a href="https://www.flickr.com/photos/althani-cornerstone/">Mubarak ALThani</a>'s Flickr page.</li>
+        <li>Credits page background image owner - <a href="https://www.flickr.com/photos/ileohidalgo/">Leo Hidalgo</a>'s Flickr page.
+        <li>Check out Flickr's Homepage <a href="https://www.flickr.com/">here</a>!</li>
+      </ul>
   </body>
 </html>
 <!--  -->
