--- a/html/game.html
+++ b/html/game.html
@@ -6,21 +6,24 @@
     @import url('https://fonts.googleapis.com/css?family=Nosifer');
     </style>
     <title>About Roscoe Horror Game</title>
-    <link href="css/style.css" type="text/css" rel="stylesheet" />
+    <link href="../css/gamestyle.css" type="text/css" rel="stylesheet" />
   </head>
   <body>
-    <nav><!--Make links for all--->
+    <nav>
       <table>
         <tr>
-          <td><a href="html/home.html">Home</a></td>
-          <td><a href="index.html">Game</a></td>
-          <td><a href="html/credits.html">Credits</a></td>
+          <td><a href="../index.html" title="Homepage">Home</a>
+          </td>
+          <td><a href="game.html" title="Prompt-Based Horror Game">Game</a>
+          </td>
+          <td><a href="credits.html" title="Image Credits">Credits</a>
+          </td>
         </tr>
       </table>
     </nav>
     <div>
       <h2>I<br>want<br>to<br>play<br>a<br>game with you</h2>
     </div>
-    <script src="js/app.js"></script>
+    <script src="../js/app.js"></script>
   </body>
 </html>
