--- a/index.html
+++ b/index.html
@@ -3,38 +3,26 @@
   <head>
     <meta charset="utf-8">
     <title>Roscoe at a Glance</title>
-    <link href="../css/homestyle.css" type="text/css" rel="stylesheet" />
+    <link href="css/homestyle.css" type="text/css" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css?family=Ceviche+One" rel="stylesheet">
   </head>
   <body>
     <nav><!--Make links for all--->
       <table>
         <tr>
-          <td><a href="home.html">Home</a></td>
-          <td><a href="../index.html">Game</a></td>
-          <td><a href="credits.html">Credits</a></td>
+          <td><a href="index.html" title="Homepage">Home</a>
+          </td>
+          <td><a href="html/game.html" title="Prompt-Based Horror Game">Game</a>
+          </td>
+          <td><a href="html/credits.html" title="Image Credits">Credits</a>
+          </td>
         </tr>
       </table>
     </nav>
-    <h2>Roscoe at a Glance</h2>
+    <h1>Roscoe at a Glance</h1>
     <dl> <!--Quick summary of who I am--->
-      <dt>Bio</dt>
-      <section><!--Top 10 List --->
-        <h3>Roscoe's Top 10 Sushi</h3>
-        <ol class="top10">
-          <li>Uni</li>
-          <li>Sake(Salmon)</li>
-          <li>Ahi</li>
-          <li>Hamachi</li>
-          <li>Unagi</li>
-          <li>Tako</li>
-          <li>Saba</li>
-          <li>Ebi</li>
-          <li>Roe</li>
-          <li>Daikon Radish</li>
-        </ol>
-      </section>
-        <dd>Roscoe is a software developer and is currently a<br>student at Code Fellows as a part of the first<br> cohort of the new technology program,WTIA's<br> Apprenti in Washington state.</dd>
+      <dt class="leftSide">Bio</dt>
+        <dd class="leftSide">Roscoe is a software developer and is currently a<br>student at Code Fellows as a part of the first<br> cohort of the new technology program,WTIA's<br> Apprenti in Washington state.</dd>
       <dt>Education</dt>
         <dd>
           <ul>
@@ -58,5 +46,20 @@
           </ul>
         </dd><!--Future goals --->
     </dl>
+    <section><!--Top 10 List --->
+      <h3>Roscoe's Top 10 Sushi</h3>
+      <ol class="top10">
+        <li>Uni</li>
+        <li>Sake(Salmon)</li>
+        <li>Ahi</li>
+        <li>Hamachi</li>
+        <li>Unagi</li>
+        <li>Tako</li>
+        <li>Saba</li>
+        <li>Ebi</li>
+        <li>Roe</li>
+        <li>Daikon Radish</li>
+      </ol>
+    </section>
   </body>
 </html>
