--- a/html/credits.html
+++ b/html/credits.html
@@ -6,19 +6,22 @@
     <link href="../css/creditsstyle.css" type="text/css" rel="stylesheet" />
   </head>
   <body>
-    <nav><!--Make links for all--->
+    <nav>
       <table>
         <tr>
-          <td><a href="home.html">Home</a></td>
-          <td><a href="../index.html">Game</a></td>
-          <td><a href="credits.html">Credits</a></td>
+          <td><a href="../index.html" title="Homepage">Home</a>
+          </td>
+          <td><a href="game.html" title="Prompt-Based Horror Game">Game</a>
+          </td>
+          <td><a href="credits.html" title="Image Credits">Credits</a>
+          </td>
         </tr>
       </table>
     </nav>
     <h2>Credits</h2>
       <ul>
-        <li>Homepage background image owner - <a href="https://www.flickr.com/photos/playstationblogeurope/">Playstation Europe</a>'s <a href="https://www.flickr.com/">Flickr</a> page</li>
-        <li>Game page background image owner - <a href="https://www.flickr.com/photos/althani-cornerstone/">Mubarak ALThani</a>'s <a href="https://www.flickr.com/">Flickr</a> page</li>
+        <li>Homepage background image owner - <a href="https://www.flickr.com/photos/playstationblogeurope/">Playstation Europe</a>'s Flickr page</li>
+        <li>Game page background image owner - <a href="https://www.flickr.com/photos/althani-cornerstone/">Mubarak ALThani</a>'s Flickr page</li>
+        <li>Homepage background image owner - <a href="https://www.flickr.com/photos/ileohidalgo/">Leo Hidalgo</a>'s Flickr page</li>
   </body>
 </html>
-<!--  -->
